<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">大衛集團</string>
    <string name="last_update_time">上次更新時間: </string>
    <string name="order_memo_hint">請輸入您的預訂要求... </string>
    <string name="feed_memo_hint">請輸入您的寶貴意見... </string>
    <string name="order_name_hint">請輸入您的姓名 </string>
    <string name="order_phone_hint">請輸入您的電話 </string>
    <string name="login_name_hint">請輸入您的賬號 </string>
    <string name="login_pwd_hint">請輸入密碼 </string>
    <string name="login_verify_hint">輸入驗證碼 </string>
    <string name="login_verify_error">驗證碼輸入錯誤 </string>
    <string name="login_userpwd_error">登錄失敗：用戶名密碼輸入錯誤 </string>
    <string name="changepwd_null_error">所有文本框必須輸入,不可為空 </string>
    <string name="changepwd_verify_error">新密碼兩次輸入必須相同</string>
    <string name="changepwd_success">密碼修改成功</string>
    <string name="changepwd_fail">密碼修改失敗,請稍候再試</string>
    <string name="changepwd_title">修改密碼</string>
    <string name="login_up">上線 </string>
    <string name="login_down">下線 </string>
    <string name="login">登錄 </string>
    <string name="quit">退出</string>
    <string name="change_pwd">修改密碼 </string>
    <string name="login_change">變更 </string>
    <string name="order_submit">提交 </string>
    <string name="cancel">取消</string>
    <string name="reset">重置</string>
    <string name="order_history">訂單列表</string>
    <string name="generic_server_down">服務器臨時無法訪問,請稍候再試.</string>
    <string name="no_internet">目前無網絡鏈接,請鏈接後再試</string>
    <string name="generic_error">網絡異常</string>
    <string name="refresh_no_data">沒有數據</string>
    <string name="load_no_more_data">沒有數據可以加載</string>
    <string name="login_error">登陸失敗:用戶名密碼錯誤</string>
    <string name="sure_quit_app">再按一次後退按鈕將退出應用</string>
    <string name="no_carousel">暫無消息</string>
    <string name="member_title_main">資料查詢</string>
    <string name="member_title_zong">綜合查詢</string>
    <string name="member_title_daikuan">未還貸款查詢</string>
    <string name="member_title_shangxia">上下數</string>
    <string name="member_title_m">M數明細</string>
    <string name="member_title_cundan">存單數明細</string>
    <string name="member_title_cunji">存咭明細</string>
    <string name="member_title_zhuanma">轉碼明細</string>
    <string name="member_select_line">請選擇下線</string>
    <string name="member_select_hall">請選廳</string>
    <string name="member_tab_m">M數</string>
    <string name="member_tab_cundan">存單數</string>
    <string name="member_tab_cunji">存咭</string>
    <string name="member_tab_zhuanma">轉碼</string>
    <string name="member_total">合計</string>
    <string name="member_group_total_m">所屬上線集團總M數</string>
    <string name="member_group_total_cundan">所屬上線集團總存單數</string>
    <string name="member_group_total_cunji">所屬上線集團總存咭數</string>
    <string name="member_group_total_zhuanma">所屬上線集團總轉碼數</string>
    <string name="member_zong_splitor"> | 長期額: </string>
    <string name="member_hall_name">廳名</string>
    <string name="member_client_name">客戶</string>
    <string name="member_detail_downline">下線:</string>
    <string name="member_detail_hall">廳會:</string>
    <string name="member_detail_qianm">欠M數</string>
    <string name="member_detail_time">時間</string>
    <string name="member_detail_money">金額</string>
    <string name="member_detail_memo">備註</string>
    <string name="member_detail_blue">藍</string>
    <string name="member_detail_white">白</string>
    <string name="member_detail_hint">如需查詢,請致電賬房</string>
    <string name="member_detail_principle">本金</string>
    <string name="member_detail_updown">上下</string>
    <string name="member_date_yesterday">昨天</string>
    <string name="member_date_today">今天</string>
    <string name="really_quit">是否確定要退出?</string>
    <string name="pwd_hint">密碼由6-16位半角字符(字母、數字、符號)組成,區分大小寫 </string>
    <string name="pwd_old">舊密碼</string>
    <string name="pwd_new">新密碼</string>
    <string name="pwd_verify">確認新密碼</string>
    <string name="waiting">連接網絡中,請稍候</string>
    <string name="save_feedback_error">您的意見已發送成功,客服人員將與您聯繫</string>
    <string name="save_feedback_success">意見保存失敗,請稍候再試</string>
    <string name="save_order_success">訂單提交成功</string>
    <string name="save_order_fail">訂單提交失敗,請稍候再試</string>
    <string name="back">返回</string>
    <string name="no_data">暫無數據</string>

    <string-array name="main_tab_label">
        <item >資料查詢</item>
        <item >推廣諮訊</item>
        <item >廳會介紹</item>
        <item >大衛集團</item>
        <item >線上預訂</item>
        <item >服務項目</item>
        <item >聯繫我們</item>
        <item >意見箱</item>
    </string-array>
</resources>
