<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/transparent"
    android:padding="@dimen/content_margin_dimen"
    >

        <HorizontalScrollView
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:background="#2B2937"
                
                >
                <LinearLayout
                    android:id="@+id/orderBtnPanel"
                    android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:background="#2B2937"
                android:orientation="horizontal"
                    >
                    
                </LinearLayout>
                </HorizontalScrollView>
        <EditText
                android:id="@+id/memoTxt"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="top"
                android:layout_margin="10dp"
                android:textColor="#989AA1"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:hint="@string/order_memo_hint"
                android:singleLine="false"
                android:background="@drawable/background_text" >

            <requestFocus />
        </EditText>

        <EditText
                android:id="@+id/nameTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:layout_margin="10dp"
                android:textColor="#989AA1"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:hint="@string/order_name_hint"
                android:singleLine="true"
                android:background="@drawable/background_text" >
            <requestFocus />
        </EditText>
        <EditText
                android:id="@+id/phoneTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:layout_margin="10dp"
                android:textColor="#989AA1"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:hint="@string/order_phone_hint"
                android:singleLine="true"
                android:background="@drawable/background_text" >
            <requestFocus />
        </EditText>
        <LinearLayout
                    android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:gravity="center_horizontal"
                android:background="@android:color/transparent"
                android:orientation="horizontal"
                    >

                <Button
                    android:id="@+id/historyBtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/order_history" 
                    android:textSize="20sp"
                    android:textColor="@android:color/white"
                    android:layout_margin="10dp"
                    android:layout_marginLeft="10dp"
                    android:background="#C0C71B1B"/>
                
                <Button
                    android:id="@+id/okBtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/order_submit" 
                    android:textSize="20sp"
                    android:textColor="@android:color/white"
                    android:layout_margin="10dp"
                    android:layout_marginRight="10dp"
                    android:background="#C01ABC9C"/>
                </LinearLayout>

</LinearLayout>
