<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:orientation="vertical"
    android:padding="0dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/content_margin_dimen"
        android:paddingLeft="@dimen/content_margin_dimen"
        android:paddingRight="@dimen/content_margin_dimen"
        android:paddingTop="0dp" >

        <EditText
            android:id="@+id/feedbackTxt"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/background_text"
            android:gravity="top"
            android:hint="@string/feed_memo_hint"
            android:singleLine="false"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#989AA1"
             >

        </EditText>

        <EditText
            android:id="@+id/f_phoneTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/background_text"
            android:gravity="top"
            android:hint="@string/order_phone_hint"
            android:singleLine="true"
            android:inputType="phone"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#989AA1" >

        </EditText>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/resetBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="#C0C71B1B"
                android:text="@string/reset"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/f_okBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="#C01ABC9C"
                android:text="@string/order_submit"
                android:textColor="@android:color/white"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>