<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_main"
    android:orientation="vertical"
    android:clickable="true"
    android:paddingBottom="@dimen/content_margin_dimen"
        android:paddingLeft="@dimen/content_margin_dimen"
        android:paddingRight="@dimen/content_margin_dimen"
        android:paddingTop="@dimen/content_margin_dimen">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:gravity="center_horizontal|top"
        android:orientation="vertical"
         >

        <EditText
            android:id="@+id/pwd_old_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/background_text"
            android:drawableLeft="@drawable/lock"
            android:gravity="top"
            android:hint="@string/pwd_old"
            android:padding="15dp"
            android:singleLine="true"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#989AA1" >

            <requestFocus />
        </EditText>
        
        <ImageView 
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:background="@android:color/transparent"
            />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:padding="10dp"
                android:text="@string/pwd_hint"
                android:textColor="@android:color/white"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        
        <ImageView 
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:background="@android:color/transparent"
            />
        
        <EditText
            android:id="@+id/pwd_new_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/background_text"
            android:drawableLeft="@drawable/lock"
            android:gravity="top"
            android:hint="@string/pwd_new"
            android:padding="10dp"
            android:singleLine="true"
            android:inputType="textPassword"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#989AA1" >

            <requestFocus />
        </EditText>
        
        <ImageView 
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:background="@android:color/transparent"
            />
        
        <EditText
            android:id="@+id/pwd_verify_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/background_text"
            android:drawableLeft="@drawable/lock"
            android:gravity="top"
            android:hint="@string/pwd_verify"
            android:padding="10dp"
            android:singleLine="true"
            android:inputType="textPassword"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#989AA1" >

            <requestFocus />
        </EditText>

        
    </LinearLayout>
	<Button
            android:id="@+id/changePwdBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginLeft="10dp"
            android:background="#C01ABC9C"
            android:text="@string/changepwd_title"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
</LinearLayout>