<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_main"
    android:orientation="vertical"
    android:padding="0dp" >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="0dp"
        android:src="@drawable/background_member_main" />

    <FrameLayout 
         android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        >
        <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:padding="0dp"
        android:src="@drawable/background_member_main_shadow" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="top"
        android:background="@android:color/transparent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/content_margin_dimen"
        android:paddingLeft="@dimen/content_margin_dimen"
        android:paddingRight="@dimen/content_margin_dimen"
        android:paddingTop="0dp" >

        <TextView
            android:id="@+id/zongheBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:gravity="left|center_vertical"
            android:background="#E01D192F"
            android:text="@string/member_title_zong"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/member_menu_text_color"
            android:drawableLeft="@drawable/icon_zonghe"
            android:drawableRight="@drawable/button_gointo"
             />
        <ImageView 
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#88888E"
            />
        <TextView
            android:id="@+id/kuanBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:gravity="left|center_vertical"
            android:background="#E01D192F"
            android:text="@string/member_title_daikuan"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/member_menu_text_color"
            android:drawableLeft="@drawable/icon_kuan"
            android:drawableRight="@drawable/button_gointo"
             />
        <ImageView 
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#88888E"
            />
        <TextView
            android:id="@+id/shangBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:gravity="left|center_vertical"
            android:background="#E01D192F"
            android:text="@string/member_title_shangxia"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/member_menu_text_color"
            android:drawableLeft="@drawable/icon_shangxia"
            android:drawableRight="@drawable/button_gointo"
             />
        <ImageView 
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            />
		<Button
            android:id="@+id/changePwdBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginLeft="10dp"
            android:background="#005A55"
            android:text="@string/quit"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
    <Button
            android:id="@+id/quitBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginLeft="10dp"
            android:background="#C0C71B1B"
            android:text="@string/change_pwd"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
    </LinearLayout>
    
    </FrameLayout>

</LinearLayout>