<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:orientation="vertical"
    android:padding="0dp" >

    <LinearLayout
        android:id="@+id/orderBtnPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#2B2937"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/content_margin_dimen"
        android:layout_marginRight="@dimen/content_margin_dimen" >

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/upRadio"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:checked="true"
                android:button="@null"
                android:textAppearance="?android:attr/textAppearanceLarge"
            	android:textColor="@color/login_radio_btn_txt"
                android:background="@drawable/login_radio_btn_bg"
                android:text="@string/login_up" />

            <RadioButton
                android:id="@+id/downRadio"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:button="@null"
                android:textAppearance="?android:attr/textAppearanceLarge"
            	android:textColor="@color/login_radio_btn_txt"
                android:background="@drawable/login_radio_btn_bg"
                android:text="@string/login_down" />
        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingBottom="@dimen/content_margin_dimen"
        android:paddingLeft="@dimen/content_margin_dimen"
        android:paddingRight="@dimen/content_margin_dimen"
        android:paddingTop="@dimen/content_margin_dimen" >

        <EditText
            android:id="@+id/login_user_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/background_text"
            android:drawableLeft="@drawable/profile"
            android:gravity="center_vertical"
            android:hint="@string/login_name_hint"
            android:padding="10dp"
            android:singleLine="true"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#989AA1" >

        </EditText>
        
        <ImageView 
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@android:color/transparent"
            />

        <EditText
            android:id="@+id/login_pwd_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/background_text"
            android:drawableLeft="@drawable/lock"
            android:gravity="center_vertical"
            android:hint="@string/login_pwd_hint"
            android:padding="10dp"
            android:singleLine="true"
            android:inputType="textPassword"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#989AA1" >

        </EditText>

        <ImageView 
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@android:color/transparent"
            />
        
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:gravity="left|center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/login_verify_show_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#2B2937"
                android:paddingTop="10dp"
                android:paddingRight="15dp"
                android:paddingBottom="10dp"
                android:paddingLeft="15dp"
                android:layout_marginLeft="5dp"
                android:textColor="@android:color/white"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            
            <TextView
                android:id="@+id/login_change_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#C01ABC9C"
                android:padding="10dp"
                android:text="@string/login_change"
                android:textColor="@android:color/white"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>
        
        <ImageView 
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@android:color/transparent"
            />
        
        <EditText
                android:id="@+id/login_verify_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/background_text"
                android:gravity="center_vertical"
                android:hint="@string/login_verify_hint"
                android:padding="10dp"
                android:singleLine="true"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#989AA1"
                android:drawableLeft="@drawable/lock" >

            </EditText>

        <ImageView 
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            />
        
        <Button
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginLeft="10dp"
            android:background="#C01ABC9C"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>